# file_renamer_tool

./: .gitignore  CMakeLists.txt  README.md  appxmanifest.xml  build.bat  check_gpu_compatibility.bat  clean.bat  cuda_hash.cu  cuda_hash.cuh  file_renamer_cli.cpp  index.html  package-lock.json  package.json  start_web.bat
.github/workflows/: build-and-release.yml  build-validation.yml
cpp/: CMakeLists.txt  build.bat  clean.bat
gui/: Cargo.toml
gui/src/: app.rs  main.rs  theme.rs
rust/: Cargo.toml  build.bat
rust/src/: cli.rs  file_ops.rs  hash.rs  lib.rs  main.rs  scanner.rs  workers.rs
scripts/: msix.bat
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
web/: server.py
web/static/: index.html
