[package]
name = "file_renamer_tauri"
version = "0.1.0"
description = "Tauri desktop wrapper for File Renamer Tool"
authors = ["Your Name <you@example.com>"]
license = "MIT"
repository = "https://github.com/caojiachen1/file_renamer_tool"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "dialog-all",
  "shell-all",
  "fs-all",
  "path-all",
  "window-all"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
anyhow = "1"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
